HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumUnknownVariant/Source/Main.uv
//! Rejected enum specimen for construction of an unknown variant.

public enum KnownVariantPayload {
    Known
}

public procedure enumUnknownVariantReference() -> KnownVariantPayload {
    return KnownVariantPayload::Missing
}
